--- a/app/src/main/res/layout/activity_add_editor.xml
+++ b/app/src/main/res/layout/activity_add_editor.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".add_Editor_Reviewer">
+    tools:context=".AddReviewer">
 
     <ImageView
         android:id="@+id/NITC_Logo_Background"
