--- a/app/src/main/res/layout/activity_add_editor_reviewer.xml
+++ b/app/src/main/res/layout/activity_add_editor_reviewer.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".add_Editor_Reviewer">
+    tools:context=".AddReviewer">
 
     <ImageView
         android:id="@+id/NITC_Logo_Background"
@@ -151,7 +151,7 @@
             android:layout_marginEnd="64dp"
             android:background="@drawable/button_background"
             android:backgroundTintMode="add"
-            android:text="Make Editor"
+            android:text="Make Reviewer"
             android:textSize="18dp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
