--- a/app/src/main/res/menu/navigation_item_editor.xml
+++ b/app/src/main/res/menu/navigation_item_editor.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
+
     <item
         android:id="@+id/signInNavDrawer"
         android:title="Sign In"
@@ -20,13 +21,11 @@
         android:icon="@drawable/baseline_add_24"/>
 
     <item
-        android:id="@+id/addReviewerNavDrawer"
-        android:title="Add Reviewer"/>
+        android:id="@+id/postArticleNavDrawer"
+        android:title="Post Article"/>
 
 
     <item
         android:id="@+id/logoutNavDrawer"
         android:title="Logout"/>
-
-
 </menu>
