--- a/app/src/main/res/layout/activity_flash_screen.xml
+++ b/app/src/main/res/layout/activity_flash_screen.xml
@@ -16,7 +16,7 @@
         app:layout_constraintHorizontal_bias="0.49"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:srcCompat="@drawable/img2" />
+        tools:srcCompat="@drawable/welcome_image3" />
 
     <TextView
         android:id="@+id/textViewSplash"
@@ -24,6 +24,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="68dp"
         android:layout_marginBottom="96dp"
+        android:fontFamily="@font/calistoga"
         android:text="NITC MAG-E"
         android:textColor="#029DE3"
         android:textSize="48sp"
