--- a/app/src/main/res/layout/activity_get_started_page.xml
+++ b/app/src/main/res/layout/activity_get_started_page.xml
@@ -46,7 +46,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/toolBar"
-        app:srcCompat="@drawable/img2" />
+        app:srcCompat="@drawable/welcome_image3" />
 
     <TextView
         android:id="@+id/textView"
