review and post article

--- a/app/src/main/res/layout/activity_reviewer_page.xml
+++ b/app/src/main/res/layout/activity_reviewer_page.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ReviewerPage">
+    tools:context=".ReviewUnpostedArticle.ReviewerPage">
 
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -58,6 +58,7 @@
             android:layout_marginTop="16dp"
             android:numStars="5"
             android:stepSize="1"
+            android:contentDescription="rating of article"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
