--- a/app/src/main/res/layout/activity_review_unposted_articles.xml
+++ b/app/src/main/res/layout/activity_review_unposted_articles.xml
@@ -4,10 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".PostUnpostedArticle.PostUnpostedArticles">
+    tools:context=".ReviewUnpostedArticle.ReviewUnpostedArticles">
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerViewUnpostedArticle"
+        android:id="@+id/recyclerViewReviewUnpostedArticle"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginStart="1dp"
@@ -18,4 +18,5 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
