--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -21,6 +21,14 @@
             android:gravity="center_vertical">
 
             <ImageView
+                android:id="@+id/downloadButton"
+                android:layout_width="40dp"
+                android:layout_height="match_parent"
+                android:layout_alignParentEnd="true"
+                android:layout_marginEnd="20dp"
+                android:src="@drawable/arrows_10_generated" />
+
+            <ImageView
                 android:id="@+id/navigationDrawerIcon"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
@@ -30,6 +38,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:id="@+id/MAGe"
                 android:layout_margin="15dp"
                 android:layout_toRightOf="@+id/navigationDrawerIcon"
                 android:text="@string/nitc_mag_e"
