Toolbar(Hamburger icon added),navigation(icons added, add editor removed from editor menu),commentAdapter(accountCircleImage added),commentCard(changed comment icon,Bold Commentator name),activityViewArticle(add comment icon),cardViewWithImage(textViewID changed for rating),EditorPage(rating roundoff,image set if null and notnull),All Adapters(Rating of Textview),AddPostFragment(Button Text Changed, Description height changed)

--- a/app/src/main/res/menu/navigation_item_editor.xml
+++ b/app/src/main/res/menu/navigation_item_editor.xml
@@ -8,24 +8,22 @@
 
     <item
         android:id="@+id/signUpNavDrawer"
-        android:title="Sign Up"/>
+        android:title="Sign Up"
+        android:icon="@drawable/baseline_app_registration_24"/>
 
     <item
         android:id="@+id/addPostNavDrawer"
         android:title="Add Post"
-        android:icon="@drawable/baseline_add_24"/>
-
-    <item
-        android:id="@+id/addEditorNavDrawer"
-        android:title="Add Editor"
-        android:icon="@drawable/baseline_add_24"/>
+        android:icon="@drawable/baseline_post_add_24"/>
 
     <item
         android:id="@+id/postArticleNavDrawer"
-        android:title="Post Article"/>
+        android:title="Post Article"
+        android:icon="@drawable/baseline_send_24"/>
 
 
     <item
         android:id="@+id/logoutNavDrawer"
-        android:title="Logout"/>
+        android:title="Logout"
+        android:icon="@drawable/baseline_logout_24"/>
 </menu>
