--- a/app/src/main/res/layout/activity_editor_page.xml
+++ b/app/src/main/res/layout/activity_editor_page.xml
@@ -14,8 +14,9 @@
         <ImageView
             android:id="@+id/articleImage"
             android:layout_width="match_parent"
-            android:layout_height="250dp"
+            android:layout_height="wrap_content"
             android:scaleType="centerCrop"
+            android:minHeight="300dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -59,14 +60,15 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
             android:numStars="5"
-            android:stepSize="1"
+            android:stepSize="0.1"
             android:contentDescription="rating"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/articleText"
-            app:layout_constraintVertical_bias="0.035" />
+            app:layout_constraintVertical_bias="0.035"
+            />
 
         <TextView
             android:id="@+id/rating"
