--- a/app/src/main/res/layout/activity_reviewer_page.xml
+++ b/app/src/main/res/layout/activity_reviewer_page.xml
@@ -14,7 +14,7 @@
         <ImageView
             android:id="@+id/articleImage"
             android:layout_width="match_parent"
-            android:layout_height="250dp"
+            android:layout_height="wrap_content"
             android:scaleType="centerCrop"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
