--- a/app/src/main/res/layout/activity_view_article.xml
+++ b/app/src/main/res/layout/activity_view_article.xml
@@ -14,7 +14,7 @@
         <ImageView
             android:id="@+id/articleImageArticleView"
             android:layout_width="0dp"
-            android:layout_height="300dp"
+            android:layout_height="wrap_content"
             android:layout_marginBottom="19dp"
             android:maxHeight="300dp"
             android:minHeight="300dp"
@@ -56,7 +56,7 @@
             android:layout_height="50dp"
             android:layout_marginStart="10dp"
             android:layout_marginEnd="8dp"
-            android:src="@drawable/test"
+            android:src="@drawable/baseline_add_comment_24"
             app:layout_constraintBottom_toTopOf="@+id/commentArticleView"
             app:layout_constraintEnd_toStartOf="@+id/commentArticleView"
             app:layout_constraintStart_toStartOf="parent"
