--- a/app/src/main/res/layout/card_view_with_image.xml
+++ b/app/src/main/res/layout/card_view_with_image.xml
@@ -67,14 +67,14 @@
                 android:layout_marginTop="10dp"
                 android:src="@drawable/test"
                 app:layout_constraintBottom_toTopOf="@+id/textViewAuthorNameCard"
-                app:layout_constraintEnd_toStartOf="@+id/textView3"
+                app:layout_constraintEnd_toStartOf="@+id/textViewRating"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/textViewTitleCard"
                 tools:srcCompat="@tools:sample/avatars" />
 
             <TextView
-                android:id="@+id/textView3"
+                android:id="@+id/textViewRating"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/textViewTitleCard"
@@ -93,7 +93,7 @@
                 android:layout_below="@+id/textViewTitleCard"
                 android:layout_marginLeft="100dp"
                 android:layout_marginTop="10dp"
-                android:layout_toRightOf="@+id/textView3"
+                android:layout_toRightOf="@+id/textViewRating"
                 android:text="TextView"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
