--- a/app/src/main/res/layout/comment_card.xml
+++ b/app/src/main/res/layout/comment_card.xml
@@ -17,7 +17,7 @@
             android:layout_marginStart="10dp"
             android:layout_marginTop="10dp"
             android:layout_marginEnd="10dp"
-            android:src="@drawable/test"
+            android:src="@drawable/baseline_account_circle_24"
             app:layout_constraintEnd_toStartOf="@+id/commentUserName"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -29,6 +29,7 @@
             android:layout_marginTop="11dp"
             android:layout_marginEnd="283dp"
             android:text="TextView"
+            android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/circleImageViewCommentUser"
             app:layout_constraintTop_toTopOf="parent" />
