--- a/app/src/main/res/layout/fragment_add_post_fragement.xml
+++ b/app/src/main/res/layout/fragment_add_post_fragement.xml
@@ -8,12 +8,14 @@
     <EditText
         android:id="@+id/editTextTitle"
         android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_height="50dp"
         android:layout_marginStart="30dp"
         android:layout_marginTop="134dp"
         android:layout_marginEnd="30dp"
         android:layout_marginBottom="23dp"
+        android:padding="10dp"
         android:hint="Enter your title"
+        android:background="@drawable/edit_text_border"
         app:layout_constraintBottom_toTopOf="@+id/category"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -22,12 +24,13 @@
     <Spinner
         android:id="@+id/category"
         android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_height="50dp"
         android:layout_marginStart="30dp"
         android:layout_marginEnd="30dp"
         android:layout_marginBottom="16dp"
         android:layout_weight="1"
         android:contentDescription="select category"
+        android:background="@drawable/edit_text_border"
         android:inputType="none"
         app:layout_constraintBottom_toTopOf="@+id/editTextTextMultiLineDescription"
         app:layout_constraintEnd_toEndOf="parent"
@@ -37,13 +40,15 @@
     <EditText
         android:id="@+id/editTextTextMultiLineDescription"
         android:layout_width="0dp"
-        android:layout_height="100dp"
+        android:layout_height="150dp"
         android:layout_marginStart="30dp"
         android:layout_marginEnd="30dp"
         android:layout_marginBottom="41dp"
         android:ems="10"
         android:gravity="start|top"
         android:hint="Description"
+        android:padding="10dp"
+        android:background="@drawable/edit_text_border"
         android:inputType="textMultiLine"
         app:layout_constraintBottom_toTopOf="@+id/textView2"
         app:layout_constraintEnd_toEndOf="parent"
@@ -57,7 +62,8 @@
         android:layout_marginStart="30dp"
         android:layout_marginEnd="12dp"
         android:layout_marginBottom="117dp"
-        android:text="TextView"
+        android:text="Article Image"
+        android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/SubmitForReview"
         app:layout_constraintEnd_toStartOf="@+id/selectImg"
         app:layout_constraintStart_toStartOf="parent"
