--- a/app/src/main/res/layout/comment_card.xml
+++ b/app/src/main/res/layout/comment_card.xml
@@ -17,6 +17,7 @@
             android:layout_marginStart="10dp"
             android:layout_marginTop="10dp"
             android:layout_marginEnd="10dp"
+            android:paddingLeft="20dp"
             android:src="@drawable/baseline_account_circle_24"
             app:layout_constraintEnd_toStartOf="@+id/commentUserName"
             app:layout_constraintStart_toStartOf="parent"
