--- a/app/src/main/res/layout/activity_add_editor_reviewer.xml
+++ b/app/src/main/res/layout/activity_add_editor_reviewer.xml
@@ -8,7 +8,7 @@
 
     <ImageView
         android:id="@+id/NITC_Logo_Background"
-        android:layout_width="455dp"
+        android:layout_width="match_parent"
         android:layout_height="649dp"
         android:layout_marginBottom="85dp"
         android:alpha=".10"
@@ -77,9 +77,7 @@
             android:id="@+id/get_user"
             android:layout_width="200dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="50dp"
             android:layout_marginTop="32dp"
-            android:layout_marginEnd="40dp"
             android:layout_marginBottom="32dp"
             android:background="@drawable/button_background"
             android:backgroundTintMode="add"
@@ -87,9 +85,8 @@
             android:textSize="18dp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="@+id/input_Email_add_editor"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="@+id/input_Email_add_editor"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/input_Email_add_editor"
             app:strokeColor="@color/black"
             app:strokeWidth="1dp" />
@@ -109,13 +106,11 @@
         app:layout_constraintTop_toBottomOf="@+id/constraintLayout2">
 
 
-        <FrameLayout
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/frmelayout_user_details"
-            android:layout_width="328dp"
-            android:layout_height="251dp"
-            android:layout_marginStart="32dp"
+            android:layout_width="319dp"
+            android:layout_height="wrap_content"
             android:layout_marginTop="32dp"
-            android:layout_marginEnd="32dp"
             android:layout_marginBottom="100dp"
             android:padding="50dp"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -123,30 +118,46 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
 
-            <TextView
-                android:id="@+id/user_details"
-                android:layout_width="214dp"
-                android:layout_height="58dp"
-                android:layout_marginBottom="250dp"
-                android:gravity="center"
-                android:text="User Details"
-                android:textColor="@color/black"
-                android:textColorLink="#D60404"
-                android:textSize="34sp"
-                android:textStyle="normal"
+            <de.hdodenhof.circleimageview.CircleImageView
+                android:id="@+id/circleImageView"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_marginStart="66dp"
+                android:layout_marginEnd="15dp"
+                android:src="@drawable/arrows_10_generated"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/textView5"
                 app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                android:id="@+id/textView5"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="12dp"
+                android:layout_marginEnd="57dp"
+                android:layout_marginBottom="8dp"
+                android:text="@string/hello_blank_fragment"
+                app:layout_constraintBottom_toTopOf="@+id/textView6"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/circleImageView"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.25" />
+                app:layout_constraintVertical_chainStyle="packed" />
 
-
-        </FrameLayout>
+            <TextView
+                android:id="@+id/textView6"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="TextView"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="@+id/textView5"
+                app:layout_constraintTop_toBottomOf="@+id/textView5" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
         <Button
             android:id="@+id/buttom_add_editor"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_width="206dp"
+            android:layout_height="61dp"
             android:layout_marginStart="64dp"
             android:layout_marginEnd="64dp"
             android:background="@drawable/button_background"
