--- a/app/src/main/res/menu/navigation_item_editor.xml
+++ b/app/src/main/res/menu/navigation_item_editor.xml
@@ -21,6 +21,11 @@
         android:title="Post Article"
         android:icon="@drawable/baseline_send_24"/>
 
+    <item
+        android:id="@+id/deleteArticleNavDrawer"
+        android:title="Delete Article"
+        android:icon="@drawable/baseline_send_24"/>
+
 
     <item
         android:id="@+id/logoutNavDrawer"
