--- a/app/src/main/res/menu/navigation_item_admin.xml
+++ b/app/src/main/res/menu/navigation_item_admin.xml
@@ -24,7 +24,10 @@
         android:id="@+id/addReviewerNavDrawer"
         android:title="Add Reviewer"
         android:icon="@drawable/baseline_person_add_24"/>
-
+    <item
+        android:id="@+id/removeReviewerNavDrawer"
+        android:title="Remove Reviewer"
+        android:icon="@drawable/baseline_logout_24"/>
 
     <item
         android:id="@+id/logoutNavDrawer"
