--- a/app/src/main/res/layout/activity_add_editor.xml
+++ b/app/src/main/res/layout/activity_add_editor.xml
@@ -73,7 +73,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <Button
+        <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/get_user"
             android:layout_width="200dp"
             android:layout_height="wrap_content"
@@ -158,7 +158,7 @@
         </androidx.constraintlayout.widget.ConstraintLayout>
 
 
-        <Button
+        <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/buttom_add_editor"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
