--- a/app/src/main/res/layout/activity_add_editor_reviewer.xml
+++ b/app/src/main/res/layout/activity_add_editor_reviewer.xml
@@ -73,7 +73,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <Button
+        <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/get_user"
             android:layout_width="200dp"
             android:layout_height="wrap_content"
@@ -154,10 +154,10 @@
                 app:layout_constraintTop_toBottomOf="@+id/textView5" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
-        <Button
+        <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/buttom_add_editor"
             android:layout_width="206dp"
-            android:layout_height="61dp"
+            android:layout_height="48dp"
             android:layout_marginStart="64dp"
             android:layout_marginEnd="64dp"
             android:background="@drawable/button_background"
