--- a/app/src/main/res/layout/activity_editor_page.xml
+++ b/app/src/main/res/layout/activity_editor_page.xml
@@ -85,13 +85,14 @@
             app:layout_constraintTop_toBottomOf="@+id/ratingBar"
             app:layout_constraintVertical_bias="0.035" />
 
-        <Button
+        <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/rejectPost"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/ratingBar"
             android:layout_marginTop="16dp"
             android:layout_marginBottom="20dp"
+            android:background="@drawable/button_background"
             android:text="REJECT"
             app:layout_constraintHorizontal_bias="0.2"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -100,13 +101,14 @@
             app:layout_constraintTop_toBottomOf="@+id/rating"
             app:layout_constraintVertical_bias="0.035"
             />
-        <Button
+        <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/postArticle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/ratingBar"
             android:layout_marginTop="16dp"
             android:layout_marginBottom="20dp"
+            android:background="@drawable/button_background"
             android:text="POST"
             app:layout_constraintHorizontal_bias="0.8"
             app:layout_constraintBottom_toBottomOf="parent"
