--- a/app/src/main/res/layout/fragment_add_post_fragement.xml
+++ b/app/src/main/res/layout/fragment_add_post_fragement.xml
@@ -83,12 +83,14 @@
         app:layout_constraintStart_toEndOf="@+id/textView2"
         app:layout_constraintTop_toBottomOf="@+id/editTextTextMultiLineDescription" />
 
-    <Button
+    <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/SubmitForReview"
-        android:layout_width="wrap_content"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="140dp"
+        android:background="@drawable/button_background"
         android:text="Submit For Review"
+        android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
