--- a/app/src/main/res/layout/activity_reviewer_page.xml
+++ b/app/src/main/res/layout/activity_reviewer_page.xml
@@ -66,7 +66,7 @@
             app:layout_constraintTop_toBottomOf="@+id/articleText"
             app:layout_constraintVertical_bias="0.035" />
 
-        <Button
+        <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/submitRating"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -74,6 +74,7 @@
             android:layout_marginTop="16dp"
             android:layout_marginBottom="20dp"
             android:text="Submit"
+            android:background="@drawable/button_background"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
