--- a/app/src/main/res/layout/dialog_login.xml
+++ b/app/src/main/res/layout/dialog_login.xml
@@ -11,7 +11,7 @@
         android:layout_width="160dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
-        android:background="@drawable/rounded_button"
+        android:background="@drawable/button_background"
         android:layout_marginBottom="20dp"
         android:text="@string/sign_in"
         android:textColor="@color/white"
