--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -22,11 +22,13 @@
 
             <ImageView
                 android:id="@+id/downloadButton"
-                android:layout_width="40dp"
+                android:layout_width="28dp"
                 android:layout_height="match_parent"
                 android:layout_alignParentEnd="true"
-                android:layout_marginEnd="20dp"
-                android:src="@drawable/arrows_10_generated" />
+                android:layout_alignParentBottom="true"
+                android:layout_marginEnd="9dp"
+                android:layout_marginBottom="0dp"
+                android:src="@drawable/download_24" />
 
             <ImageView
                 android:id="@+id/navigationDrawerIcon"
