--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -26,6 +26,7 @@
                 android:layout_height="match_parent"
                 android:layout_alignParentEnd="true"
                 android:layout_alignParentBottom="true"
+                android:visibility="invisible"
                 android:layout_marginEnd="9dp"
                 android:layout_marginBottom="0dp"
                 android:src="@drawable/download_24" />
