--- a/app/src/main/res/layout/header_layout.xml
+++ b/app/src/main/res/layout/header_layout.xml
@@ -2,9 +2,10 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+
     android:layout_width="match_parent"
     android:layout_height="220dp"
-    android:background="#4CAF50">
+    android:background="@drawable/header_back">
 
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/profilePictureNavDraver"
