--- a/app/src/main/res/layout/activity_editor_page.xml
+++ b/app/src/main/res/layout/activity_editor_page.xml
@@ -61,6 +61,7 @@
             android:layout_marginTop="16dp"
             android:numStars="5"
             android:stepSize="0.1"
+            android:progressTint="#FFCC01"
             android:contentDescription="rating"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
