--- a/app/src/main/res/layout/activity_my_article.xml
+++ b/app/src/main/res/layout/activity_my_article.xml
@@ -4,19 +4,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".DeleteArticle.DeleteArticle">
+    tools:context=".MyArticle">
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerViewDeleteArticle"
+        android:id="@+id/recyclerViewMyArticle"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginStart="1dp"
-        android:layout_marginTop="1dp"
-        android:layout_marginEnd="1dp"
-        android:layout_marginBottom="1dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
 </androidx.constraintlayout.widget.ConstraintLayout>
