--- a/app/src/main/res/menu/navigation_item_admin.xml
+++ b/app/src/main/res/menu/navigation_item_admin.xml
@@ -39,6 +39,16 @@
         android:title="Change Password"
         android:icon="@drawable/baseline_logout_24"/>
 
+    <item
+        android:id="@+id/userProfileNavDrawer"
+        android:title="Profile"
+        android:icon="@drawable/baseline_logout_24"/>
+
+    <item
+        android:id="@+id/myArticleNavDrawer"
+        android:title="My Articles"
+        android:icon="@drawable/baseline_logout_24"/>
+
 
 
 </menu>
