--- a/app/src/main/res/menu/navigation_item_admin.xml
+++ b/app/src/main/res/menu/navigation_item_admin.xml
@@ -49,6 +49,10 @@
         android:title="My Articles"
         android:icon="@drawable/baseline_logout_24"/>
 
+    <item
+        android:id="@+id/rejectedArticleNavDrawer"
+        android:title="Rejected Articles"
+        android:icon="@drawable/baseline_logout_24"/>
 
 
 </menu>
