--- a/app/src/main/res/menu/navigation_item_reviewer.xml
+++ b/app/src/main/res/menu/navigation_item_reviewer.xml
@@ -28,7 +28,17 @@
 
     <item
         android:id="@+id/myArticleNavDrawer"
+        android:title="My Article"
+        android:icon="@drawable/baseline_logout_24"/>
+
+    <item
+        android:id="@+id/userProfileNavDrawer"
         android:title="Profile"
+        android:icon="@drawable/baseline_logout_24"/>
+
+    <item
+        android:id="@+id/rejectedArticleNavDrawer"
+        android:title="Rejected Articles"
         android:icon="@drawable/baseline_logout_24"/>
 
 
