userProfile.xml(imageBorder),UserProfile.java(defaulticon),AddPostFragment(add to Reviewtable),ReviewerPage(Store reviewer after review),Editor(Remove from Review Table after post),AllFragments(SearchBar Added by Title),navigations(Profile and MyActivity correct).

--- a/app/src/main/res/layout/activity_user_profile.xml
+++ b/app/src/main/res/layout/activity_user_profile.xml
@@ -18,6 +18,9 @@
             android:layout_marginTop="100dp"
             android:src="@drawable/img_1"
             android:layout_gravity="center"
+            app:civ_border_color="@color/black"
+            app:civ_border_width="3dp"
+            app:srcCompat="@drawable/img_1"
             />
 
         <TextView
