--- a/app/src/main/res/menu/navigation_item_editor.xml
+++ b/app/src/main/res/menu/navigation_item_editor.xml
@@ -26,15 +26,19 @@
         android:title="Delete Article"
         android:icon="@drawable/baseline_delete_24"/>
 
-
     <item
         android:id="@+id/logoutNavDrawer"
         android:title="Logout"
         android:icon="@drawable/baseline_logout_24"/>
 
     <item
-        android:id="@+id/myArticleNavDrawer"
+        android:id="@+id/userProfileNavDrawer"
         android:title="Profile"
-        android:icon="@drawable/baseline_logout_24"/>
+        android:icon="@drawable/img_2"/>
+
+    <item
+        android:id="@+id/myArticleNavDrawer"
+        android:title="My Articles"
+        android:icon="@drawable/baseline_article_24"/>
 
 </menu>
