--- a/app/src/main/res/menu/navigation_item_reviewer.xml
+++ b/app/src/main/res/menu/navigation_item_reviewer.xml
@@ -27,9 +27,13 @@
         android:icon="@drawable/baseline_logout_24"/>
 
     <item
-        android:id="@+id/myArticleNavDrawer"
+        android:id="@+id/userProfileNavDrawer"
         android:title="Profile"
-        android:icon="@drawable/baseline_logout_24"/>
+        android:icon="@drawable/img_2"/>
 
+    <item
+        android:id="@+id/myArticleNavDrawer"
+        android:title="My Articles"
+        android:icon="@drawable/baseline_article_24"/>
 
 </menu>
