--- a/app/src/main/res/layout/card_view_with_image.xml
+++ b/app/src/main/res/layout/card_view_with_image.xml
@@ -91,9 +91,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/textViewTitleCard"
-                android:layout_marginLeft="100dp"
-                android:layout_marginTop="10dp"
-                android:layout_toRightOf="@+id/textViewRating"
+                android:layout_marginTop="6dp"
+                android:layout_alignParentRight="true"
+
                 android:text="TextView"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
