--- a/app/src/main/res/menu/navigation_item_reviewer.xml
+++ b/app/src/main/res/menu/navigation_item_reviewer.xml
@@ -6,10 +6,16 @@
         android:title="Sign In"
         android:icon="@drawable/baseline_login_24"/>
 
+
     <item
         android:id="@+id/signUpNavDrawer"
         android:title="Sign Up"
         android:icon="@drawable/baseline_app_registration_24"/>
+
+    <item
+        android:id="@+id/userProfileNavDrawer"
+        android:title="Profile"
+        android:icon="@drawable/baseline_person_24"/>
 
     <item
         android:id="@+id/addPostNavDrawer"
@@ -17,29 +23,28 @@
         android:icon="@drawable/baseline_post_add_24"/>
 
     <item
+        android:id="@+id/myArticleNavDrawer"
+        android:title="My Article"
+        android:icon="@drawable/baseline_article_24"/>
+
+    <item
+        android:id="@+id/rejectedArticleNavDrawer"
+        android:title="Rejected Articles"
+        android:icon="@drawable/baseline_cancel_presentation_24"/>
+
+    <item
         android:id="@+id/reviewArticleNavDrawer"
         android:title="Review Article"
         android:icon="@drawable/baseline_analytics_24" />
 
     <item
+        android:id="@+id/changePasswordNavDrawer"
+        android:title="Change Password"
+        android:icon="@drawable/baseline_password_24"/>
+
+    <item
         android:id="@+id/logoutNavDrawer"
         android:title="Logout"
         android:icon="@drawable/baseline_logout_24"/>
-
-    <item
-        android:id="@+id/myArticleNavDrawer"
-        android:title="My Article"
-        android:icon="@drawable/baseline_logout_24"/>
-
-    <item
-        android:id="@+id/userProfileNavDrawer"
-        android:title="Profile"
-        android:icon="@drawable/baseline_logout_24"/>
-
-    <item
-        android:id="@+id/rejectedArticleNavDrawer"
-        android:title="Rejected Articles"
-        android:icon="@drawable/baseline_logout_24"/>
-
 
 </menu>
