--- a/app/src/main/res/layout/change_password_dialog_box.xml
+++ b/app/src/main/res/layout/change_password_dialog_box.xml
@@ -5,16 +5,30 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:paddingTop="20dp"
+    android:elevation="20dp"
     android:paddingBottom="20dp">
+
+    <ImageView
+        android:id="@+id/NITC_Logo_Background"
+        android:layout_width="408dp"
+        android:layout_height="340dp"
+        android:layout_marginTop="10dp"
+        android:alpha=".08"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/nitc" />
 
     <EditText
         android:id="@+id/oldPassword"
-        android:layout_width="wrap_content"
+        android:layout_width="250dp"
         android:layout_height="48dp"
         android:layout_marginTop="56dp"
         android:layout_marginBottom="13dp"
         android:ems="10"
-        android:hint="Old Password"
+        android:background="@drawable/rounded_edit_text"
+        android:paddingStart="5dp"
+        android:hint="  Old Password"
         android:inputType="textPassword"
         app:layout_constraintBottom_toTopOf="@+id/confirmPassword"
         app:layout_constraintEnd_toEndOf="parent"
@@ -23,11 +37,12 @@
 
     <EditText
         android:id="@+id/newPassword"
-        android:layout_width="wrap_content"
+        android:layout_width="250dp"
         android:layout_height="48dp"
         android:layout_marginBottom="43dp"
         android:ems="10"
-        android:hint="Confirm Password"
+        android:background="@drawable/rounded_edit_text"
+        android:hint="  Confirm Password"
         android:inputType="textPassword"
         app:layout_constraintBottom_toTopOf="@+id/ChangePassword"
         app:layout_constraintStart_toStartOf="@+id/confirmPassword"
@@ -35,11 +50,13 @@
 
     <EditText
         android:id="@+id/confirmPassword"
-        android:layout_width="wrap_content"
+        android:layout_width="250dp"
         android:layout_height="48dp"
         android:layout_marginBottom="14dp"
         android:ems="10"
-        android:hint="New Password"
+        android:hint="  New Password"
+        android:background="@drawable/rounded_edit_text"
+
         android:inputType="textPassword"
         app:layout_constraintBottom_toTopOf="@+id/newPassword"
         app:layout_constraintStart_toStartOf="@+id/oldPassword"
@@ -50,6 +67,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="20dp"
+        android:background="@drawable/rounded_button"
         android:text="change password"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
