--- a/app/src/main/res/layout/comment_card.xml
+++ b/app/src/main/res/layout/comment_card.xml
@@ -12,8 +12,8 @@
 
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/circleImageViewCommentUser"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
             android:layout_marginLeft="50dp"
             android:layout_marginStart="10dp"
             android:layout_marginEnd="10dp"
@@ -27,6 +27,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
+            android:textColor="@color/black"
             android:text="TextView"
             android:textStyle="bold"
             app:layout_constraintStart_toEndOf="@+id/circleImageViewCommentUser"
@@ -36,6 +37,7 @@
             android:id="@+id/commentText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
             android:layout_marginBottom="2dp"
             android:text="TextView"
             app:layout_constraintBottom_toBottomOf="@+id/circleImageViewCommentUser"
